force-app/main/default/objects/Account/fields/Grasp_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Grasp_Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Grasp Customer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>