force-app/main/default/objects/Account/fields/Products_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Products_Purchased__c</fullName>
    <label>Products Purchased</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Interest</valueSetName>
    </valueSet>
</CustomField>