force-app/main/default/objects/Account/fields/Sw_Sub_Domain__c.field-meta.xml
<CustomField>
    <fullName>Sw_Sub_Domain__c</fullName>
    <label>Sub Domain</label>
    <length>60</length>
    <type>Text</type>
</CustomField>